[gd_scene load_steps=21 format=3 uid="uid://dg83guknsau34"]

[ext_resource type="Script" uid="uid://uy177ecutt1c" path="res://hero/hero_w_upgrade.gd" id="1_pgpv3"]
[ext_resource type="Script" uid="uid://dvsgx01aw44ka" path="res://scripts/player/player_stats.gd" id="2_eeu4s"]
[ext_resource type="Script" uid="uid://51okejqfv4x4" path="res://scripts/player/character_data.gd" id="3_xfsxd"]
[ext_resource type="Resource" uid="uid://c18lgoi2itnqp" path="res://scripts/player/character_data_stats/default_character.tres" id="4_ule3g"]
[ext_resource type="Script" uid="uid://dyfqxrqdedfu0" path="res://scripts/player/managers/experience_manager.gd" id="5_fr1xr"]
[ext_resource type="Script" uid="uid://po1xvpn25h04" path="res://scripts/player/managers/upgrade_manager.gd" id="6_fikij"]
[ext_resource type="Resource" uid="uid://cj3y0ylyx788x" path="res://scripts/passive_items/passive_data_upgrades/0_food_passive.tres" id="7_6wveg"]
[ext_resource type="Script" uid="uid://dperxeiisbt1j" path="res://scripts/player/player_inventory.gd" id="8_ns347"]
[ext_resource type="Script" uid="uid://o20ohspsio10" path="res://scripts/passive_items/passive_data.gd" id="9_kmubl"]
[ext_resource type="Resource" uid="uid://dm71xpb6ct7ko" path="res://scripts/passive_items/passive_data_upgrades/1_health_passive.tres" id="10_pfc3y"]
[ext_resource type="Resource" uid="uid://coqw28ss3yehg" path="res://scripts/passive_items/passive_data_upgrades/2_regeneration_passive.tres" id="11_pfeda"]
[ext_resource type="Resource" uid="uid://c42y17qv714xe" path="res://scripts/passive_items/passive_data_upgrades/3_weapon_damage_passive.tres" id="12_u6jy1"]
[ext_resource type="Resource" uid="uid://2dxac6i6w0m1" path="res://scripts/passive_items/passive_data_upgrades/4_defence_passive.tres" id="13_ari2x"]
[ext_resource type="Resource" uid="uid://cpyoy4jybrisa" path="res://scripts/passive_items/passive_data_upgrades/5_critical_chance_passive.tres" id="14_kc7lx"]
[ext_resource type="Resource" uid="uid://jyb08233ytw6" path="res://scripts/passive_items/passive_data_upgrades/6_critical_power_passive.tres" id="15_er5ne"]
[ext_resource type="Resource" uid="uid://bs0pdc0v6yba" path="res://scripts/passive_items/passive_data_upgrades/7_attack_speed_passive.tres" id="16_h05hn"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_vho56"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_pyidc"]

[sub_resource type="SphereShape3D" id="SphereShape3D_dpa0h"]
radius = 2.0

[sub_resource type="Resource" id="Resource_cxmd6"]
script = ExtResource("3_xfsxd")
character_name = "Hero"
stats = ExtResource("4_ule3g")
metadata/_custom_type_script = "uid://51okejqfv4x4"

[node name="Hero" type="CharacterBody3D" node_paths=PackedStringArray("player_stats", "player_inventory") groups=["player"]]
collision_layer = 3
script = ExtResource("1_pgpv3")
player_stats = NodePath("PlayerStats")
player_inventory = NodePath("PlayerInventory")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_vho56")

[node name="Visual" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Visual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_pyidc")
skeleton = NodePath("../..")

[node name="Grabber" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="Grabber"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("SphereShape3D_dpa0h")

[node name="Collector" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="Collector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_vho56")

[node name="PlayerStats" type="Node" parent="." node_paths=PackedStringArray("inventory", "collector", "grabber")]
script = ExtResource("2_eeu4s")
character_data = SubResource("Resource_cxmd6")
inventory = NodePath("../PlayerInventory")
collector = NodePath("../Collector")
grabber = NodePath("../Grabber")
metadata/_custom_type_script = "uid://dvsgx01aw44ka"

[node name="ExperienceManager" type="Node" parent="." node_paths=PackedStringArray("upgrade_manager", "player_inventory")]
script = ExtResource("5_fr1xr")
upgrade_manager = NodePath("../UpgradeManager")
player_inventory = NodePath("../PlayerInventory")
metadata/_custom_type_script = "uid://dyfqxrqdedfu0"

[node name="UpgradeManager" type="Node" parent="."]
script = ExtResource("6_fikij")
food_resource = ExtResource("7_6wveg")
metadata/_custom_type_script = "uid://po1xvpn25h04"

[node name="PlayerInventory" type="Node" parent="." node_paths=PackedStringArray("passives", "upgrade_manager")]
script = ExtResource("8_ns347")
passives = NodePath("Passives")
upgrade_manager = NodePath("../UpgradeManager")
available_passives = Array[ExtResource("9_kmubl")]([ExtResource("10_pfc3y"), ExtResource("11_pfeda"), ExtResource("12_u6jy1"), ExtResource("13_ari2x"), ExtResource("14_kc7lx"), ExtResource("15_er5ne"), ExtResource("16_h05hn")])
metadata/_custom_type_script = "uid://dperxeiisbt1j"

[node name="Weapons" type="Node" parent="PlayerInventory"]

[node name="Passives" type="Node" parent="PlayerInventory"]

[connection signal="area_entered" from="Grabber" to="ExperienceManager" method="_on_grabber_area_entered"]
[connection signal="area_entered" from="Collector" to="ExperienceManager" method="_on_collector_area_entered"]
